# pyroads

./: .gitignore  __init__.py  augment.py  modelling.py  pyproject.toml  readme.md  reshape.py  setup.cfg  setup.py
Azure/: ConditionEx2sql.py  CorpEx2sql.py  CorpExpandData.py  Data2SQL.py  ExpandData.py  GetDataCSV.py  LineEx2sql.py  ReformatProcessedCorpEx.py  StrEx2sql.py  config.py
arcpy/: Cracking_Reclass_CAT.py  GeocodeSLK_Conditions.py  GeocodeSLK_Conditions_Tool.py  PCI_Reclass_CAT.py  Readme.md
mainroads.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyroads/: augment.py  reshape.py
src/pyroads/: calc.py
src/pyroads/mappings/: cross_sectional_position.py  lane.py  link_category.py  pavement.py  region.py  road_side.py  route.py  rurality.py  surface.py
src/pyroads/misc/: custom_aggregations.py  deteriorate.py
src/pyroads/pivot/: __init__.py  cway_to_side.py  lane_side_split.py  lane_to_col.py  lane_to_row.py  lane_to_side.py
src/pyroads/reshape/: __init__.py  get_segments.py  interval_merge.py  make_segments.py  stretch.py  widen_by_lane.py
src/pyroads/reshape/_functions/: _as_meters.py  _as_metres.py  _gcd_list.py  as_metres.py  get_segments.py  interval_merge.py  make_segments.py  stretch.py  widen_by_lane.py
src/pyroads/reshape/_util/: gcd_list.py
test/: test_gcd_list.py  test_interval_merge.py  test_lane_to_row.py  test_make_segments.py  test_readme_example.py  test_stretch.py
test/test_data/: tsd_albany_hwy_poe_1.4.csv
