[metadata]
name = pyroads
version = 0.2.1
author = Shaan Ciantar
description = For analysis of road asset data
url = https://github.com/shaan-nmb/pyroads

[options]
package_dir =
    = src
packages =
    find:
install_requires =
    pandas
    
[options.packages.find]
    where = src
