[metadata]
name = pyroads
version = 0.2.13
author = Shaan Ciantar
description = For analysis of road asset data
url = https://github.com/shaan-nmb/pyroads

[options]
package_dir =
    = src
packages =find:
install_requires =
    pandas
    deprecated
python_requires = >=3.9

[options.packages.find]
where = src
